--- a/wp-content/themes/radge/style.css
+++ b/wp-content/themes/radge/style.css
@@ -7,5 +7,9 @@ Version: 1.0;
 Description:  hola dfd
 */
 body {
-
+background-color: green;
+}
+.textos {
+	font-size: 50px;
+	font-family: arial black;
 }
